# mgulibSC

./: README.md
HelpSource/Classes/: MGU_AbstractModule.schelp  MGU_container.schelp  MGU_minuitInterface.schelp
HelpSource/Guides/: BuildingUsingModules.schelp
_ugens/_c/: CMakeLists.txt  c-impl.cpp  sclang-impl.sc
_ugens/_c/_choruser/: CMakeCache.txt  CMakeLists.txt  Choruser.sc  Makefile  choruser.cpp  cmake_install.cmake
_ugens/_c/_flanger/: flanger.cpp  flanger.sc
_ugens/_c/_lfnoiser/: CMakeCache.txt  CMakeLists.txt  LfNoiser.cpp  Makefile  cmake_install.cmake
_ugens/_c/_noiser/: CMakeCache.txt  CMakeLists.txt  Makefile  Noiser.sc  cmake_install.cmake  noiser.cpp
_ugens/_c/_ramper/: ramper.cpp
_ugens/_classes/: mgu_chorus.sc  mgu_counter.sc  pitch-shifter.sc  ramper.sc  zita_rev1.sc
_ugens/_fake/: choruserSC.sc
_ugens/_plugins/: mgu_chorus.scx  mgu_counter.scx  pshifter.scx  ramper.scx
classes/: MGU_makeNote.sc
classes/SystemOverwrites/: ResponseDefs.sc
classes/_modules/: convolution.sc  onset_detector.sc
classes/_projects/: gGagnere.scd
classes/_terminal-UI/: MGU_term_AUDIOCONFIG.sc  MGU_term_BUTTON.sc  MGU_term_Object.sc  MGU_term_POSTWINDOW.sc  MGU_term_SCANF.sc
classes/_ui/: slider.sc
classes/_weather/: MGU_weather.sc  MGU_woeid.sc
classes/lib/: arrays.sc  colorpalette.sc  (+2 more)
plugins/: LfNoiser.scx  MGU_clock.scx  MGU_ramper.scx  MGU_smoother.scx  MGU_steadyRamper.scx  Noiser.scx  RfshClock.scx  drywet.scx  faustComp.scx  lfnoise.scx  smooth.scx  zita_rev1.scx
tests/: MIDI.scd  chorus.scd  grantester.scd  graphDesigner.scd  main.scd  minuit.scd  onsets.scd  parOral.scd  param.scd  synthTest.scd  tester.scd  uitests.scd  vocoder.scd
(+162 files in other folders)
